@@ -5,6 +5,9 @@ v0.003001 DEVEL NOTES: sciHelper
         - replaceTargetRE() given a wrapper similar to replaceTarget() (#41),
           but still trying to make it work right
           * https://community.notepad-plus-plus.org/post/15962 gives a LuaScript
+          -- the same sequence in Python and Perl gives different results: searchInTarget
+            returns 32 (relative to Target) in Perl but 64 (relative to whole doc) in Python
+            https://github.com/bruderstein/PythonScript/blob/master/PythonScript/src/ScintillaWrapperGenerated.cpp#L2295-L2301
     - start working on implementing scintilla helper methods (#15)
     KEEP THE HISTORY BELOW HERE (what I actually accomplish):
     - implemented helper methods: forEachLine, deleteLine, replaceWholeLine,
